cmake_minimum_required(VERSION 3.6)
project(wordelle)
add_subdirectory(magidoor)
set (CMAKE_CXX_STANDARD 11)
set(SOURCE_FILES main.cpp sqlite3.c Game.cpp)
add_executable(wordelle ${SOURCE_FILES})
if (WIN32) 
	target_link_libraries(wordelle mdoor ws2_32)
else()
	target_link_libraries(wordelle mdoor pthread)
endif()
